2007-08-20  Murad Tagirov  <tmurad@gmail.com>

    Inherit PlaceMark from Serializable to be
    able to pack/unpack it's content
    * src/lib/kml/KMLFeature.cpp
    * src/lib/kml/KMLPlaceMarkParser.{h,cpp}
    * src/lib/PlaceMarkPainter.cpp
    * src/lib/PlaceMark.{h,cpp}

    Added destructor to PlaceMarkManager to delete m_documentList.
    Delete d->m_placeMarkManager in MarbleModel's destructor instead of
    d->m_placeMarkContainer.
    * src/lib/MarbleModel.cpp
    * src/lib/PlaceMarkManager.{h,cpp}

    Set placemark symbol like in xmlhandler. Added
    parsing of CountryNameCode tag
    * src/lib/kml/KMLPlaceMarkParser.{h,cpp}

2007-08-19  Torsten Rahn  <rahn@kde.org>

        * CMakeLists.txt: Install License.txt

2007-08-19  Inge Wallin  <inge@lysator.liu.se>

	Rename files according to the coding standards: PlaceMarkInfoDialog
	* src/lib/placemarkinfodialog.cpp: renamed into PlaceMarkInfoDialog.cpp
	* src/lib/placemarkinfodialog.h:   renamed into PlaceMarkInfoDialog.h
	* src/lib/placemarkinfodialog.ui:  renamed into PlaceMarkInfoDialog.ui
	* src/lib/CMakeLists.txt:  Reflect name changes
	* src/lib/MarbleWidgetpopupMenu.cpp: use new name

	Name changes according to the coding standards:
	 - PlaceMarkModel
	 - PlaceMarkPainter
	 - PlaceMarkManager
	* src/lib/placemarkmanager.cpp: renamed into PlaceMarkManager.cpp
	* src/lib/placemarkmanager.h:   renamed into PlaceMarkManager.h
	* src/lib/placemarkmodel.cpp:   renamed into PlaceMarkModel.cpp
	* src/lib/placemarkmodel.h:     renamed into PlaceMarkModel.h
	* src/lib/placemarkpainter.cpp: renamed into PlaceMarkPainter.cpp
	* src/lib/placemarkpainter.h:   renamed into PlaceMarkPainter.h
	* src/lib/CMakeLists.txt:  Reflect name changes
	* src/lib/MarbleModel.cpp: use new names
	* src/lib/MarbleModel.h:   use new names

	Name changes according to the coding standards for MapTheme and
	PlaceMark.
	* src/lib/maptheme.cpp: renamed into MapTheme.cpp
	* src/lib/maptheme.h:   renamed into MapTheme.h