@@ -1,3 +1,9 @@
+2007-08-20  Carlos Licea  <carlos_licea@hotmail.com>
+    *MarbleWidget: added a test to see if the point given
+     to geocoordinates in flat projection it's outside the map.
+     Also solved a clip problem in paintEvent.
+    *VectorMap: added just a clarification to the code.
+
 2007-08-20  Murad Tagirov  <tmurad@gmail.com>
 
     Inherit PlaceMark from Serializable to be
